force-app/main/default/objects/BET_Fields_Setting__mdt/BET_Fields_Setting__mdt.object-meta.xml
<CustomObject>
    <label>BET Fields Setting</label>
    <pluralLabel>BET Fields Settings</pluralLabel>
</CustomObject>