force-app/main/default/objects/BET_Fields_Setting__mdt/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
                <default>true</default>
                <label>CPT</label>
            </value>
            <value>
                <fullName>BNK</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>VES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>