force-app/main/default/objects/BET_Fields_Setting__mdt/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STUSCO</fullName>
                <default>true</default>
                <label>STUSCO</label>
            </value>
            <value>
                <fullName>SENA</fullName>
            </value>
            <value>
                <fullName>WONA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>